--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="calculator-display" id="display">0</div>
+        <div class="calculator-display" id="display"></div>
 
         <div class="calc-buttons">
             <button type="button" class="btn clear">AC</button>
@@ -27,8 +27,9 @@
             <button type="button" class="btn operator">-</button>
             <button type="button" class="btn dot">.</button>
             <button type="button" class="btn number">0</button>
-            <button type="button" class="btn equal">=</button>
+            <button type="button" class="btn toggle-neg-pos">+/-</button>
             <button type="button" class="btn operator">+</button>
+            <button type="button" class="btn equal">=</button>
         </div>
     </div>
 
