Add keyboard support

--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
         <div class="calculator-display" id="display"></div>
 
         <div class="calc-buttons">
-            <button type="button" class="btn clear">AC</button>
-            <button type="button" class="btn delete">DEL</button>
-            <button type="button" class="btn number">7</button>
-            <button type="button" class="btn number">8</button>
-            <button type="button" class="btn number">9</button>
-            <button type="button" class="btn operator">/</button>
-            <button type="button" class="btn number">4</button>
-            <button type="button" class="btn number">5</button>
-            <button type="button" class="btn number">6</button>
-            <button type="button" class="btn operator">*</button>
-            <button type="button" class="btn number">1</button>
-            <button type="button" class="btn number">2</button>
-            <button type="button" class="btn number">3</button>
-            <button type="button" class="btn operator">-</button>
-            <button type="button" class="btn dot">.</button>
-            <button type="button" class="btn number">0</button>
-            <button type="button" class="btn toggle-neg-pos">+/-</button>
-            <button type="button" class="btn operator">+</button>
-            <button type="button" class="btn equal">=</button>
+            <!-- IDs for keyboard support -->
+            <button type="button" class="btn clear" id="clear">AC</button>
+            <button type="button" class="btn delete" id="delete">DEL</button>
+            <button type="button" class="btn number" id="digit-7">7</button>
+            <button type="button" class="btn number" id="digit-8">8</button>
+            <button type="button" class="btn number" id="digit-9">9</button>
+            <button type="button" class="btn operator" id="operator-divide">/</button>
+            <button type="button" class="btn number" id="digit-4">4</button>
+            <button type="button" class="btn number" id="digit-5">5</button>
+            <button type="button" class="btn number" id="digit-6">6</button>
+            <button type="button" class="btn operator" id="operator-multiply">*</button>
+            <button type="button" class="btn number" id="digit-1">1</button>
+            <button type="button" class="btn number" id="digit-2">2</button>
+            <button type="button" class="btn number" id="digit-3">3</button>
+            <button type="button" class="btn operator" id="operator-substract">-</button>
+            <button type="button" class="btn dot" id="dot">.</button>
+            <button type="button" class="btn number" id="digit-0">0</button>
+            <button type="button" class="btn toggle-neg-pos" id="toggle">+/-</button>
+            <button type="button" class="btn operator" id="operator-add">+</button>
+            <button type="button" class="btn equal" id="equal">=</button>
         </div>
     </div>
 
